// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createMenu can be removed 1`] = `
<div>
  <div
    class="marking-menu"
    style="left:30px;top:50px;"
  >
    <div
      class="marking-menu-item"
      data-item-angle="0"
      data-item-id="item-0-id"
    >
      <div
        class="marking-menu-line"
      />
      <div
        class="marking-menu-label"
      >
        item-0-name
      </div>
    </div>
    <div
      class="marking-menu-item"
      data-item-angle="10"
      data-item-id="item-1-id"
    >
      <div
        class="marking-menu-line"
      />
      <div
        class="marking-menu-label"
      >
        item-1-name
      </div>
    </div>
    <div
      class="marking-menu-item active"
      data-item-angle="20"
      data-item-id="item-2-id"
    >
      <div
        class="marking-menu-line"
      />
      <div
        class="marking-menu-label"
      >
        item-2-name
      </div>
    </div>
    <div
      class="marking-menu-item"
      data-item-angle="30"
      data-item-id="item-3-id"
    >
      <div
        class="marking-menu-line"
      />
      <div
        class="marking-menu-label"
      >
        item-3-name
      </div>
    </div>
  </div>
</div>
`;

exports[`createMenu can be removed 2`] = `<div />`;

exports[`createMenu renders 1`] = `
<div>
  <div
    class="marking-menu"
    style="left:30px;top:50px;"
  >
    <div
      class="marking-menu-item"
      data-item-angle="0"
      data-item-id="item-0-id"
    >
      <div
        class="marking-menu-line"
      />
      <div
        class="marking-menu-label"
      >
        item-0-name
      </div>
    </div>
    <div
      class="marking-menu-item"
      data-item-angle="10"
      data-item-id="item-1-id"
    >
      <div
        class="marking-menu-line"
      />
      <div
        class="marking-menu-label"
      >
        item-1-name
      </div>
    </div>
    <div
      class="marking-menu-item"
      data-item-angle="20"
      data-item-id="item-2-id"
    >
      <div
        class="marking-menu-line"
      />
      <div
        class="marking-menu-label"
      >
        item-2-name
      </div>
    </div>
    <div
      class="marking-menu-item"
      data-item-angle="30"
      data-item-id="item-3-id"
    >
      <div
        class="marking-menu-line"
      />
      <div
        class="marking-menu-label"
      >
        item-3-name
      </div>
    </div>
    <div
      class="marking-menu-item"
      data-item-angle="40"
      data-item-id="item-4-id"
    >
      <div
        class="marking-menu-line"
      />
      <div
        class="marking-menu-label"
      >
        item-4-name
      </div>
    </div>
    <div
      class="marking-menu-item active"
      data-item-angle="50"
      data-item-id="item-5-id"
    >
      <div
        class="marking-menu-line"
      />
      <div
        class="marking-menu-label"
      >
        item-5-name
      </div>
    </div>
  </div>
</div>
`;

exports[`createMenu renders without active element 1`] = `
<div>
  <div
    class="marking-menu"
    style="left:30px;top:50px;"
  >
    <div
      class="marking-menu-item"
      data-item-angle="0"
      data-item-id="item-0-id"
    >
      <div
        class="marking-menu-line"
      />
      <div
        class="marking-menu-label"
      >
        item-0-name
      </div>
    </div>
    <div
      class="marking-menu-item"
      data-item-angle="10"
      data-item-id="item-1-id"
    >
      <div
        class="marking-menu-line"
      />
      <div
        class="marking-menu-label"
      >
        item-1-name
      </div>
    </div>
    <div
      class="marking-menu-item"
      data-item-angle="20"
      data-item-id="item-2-id"
    >
      <div
        class="marking-menu-line"
      />
      <div
        class="marking-menu-label"
      >
        item-2-name
      </div>
    </div>
    <div
      class="marking-menu-item"
      data-item-angle="30"
      data-item-id="item-3-id"
    >
      <div
        class="marking-menu-line"
      />
      <div
        class="marking-menu-label"
      >
        item-3-name
      </div>
    </div>
  </div>
</div>
`;

exports[`createMenu update the active element 1`] = `
<div>
  <div
    class="marking-menu"
    style="left:30px;top:50px;"
  >
    <div
      class="marking-menu-item"
      data-item-angle="0"
      data-item-id="item-0-id"
    >
      <div
        class="marking-menu-line"
      />
      <div
        class="marking-menu-label"
      >
        item-0-name
      </div>
    </div>
    <div
      class="marking-menu-item"
      data-item-angle="10"
      data-item-id="item-1-id"
    >
      <div
        class="marking-menu-line"
      />
      <div
        class="marking-menu-label"
      >
        item-1-name
      </div>
    </div>
    <div
      class="marking-menu-item active"
      data-item-angle="20"
      data-item-id="item-2-id"
    >
      <div
        class="marking-menu-line"
      />
      <div
        class="marking-menu-label"
      >
        item-2-name
      </div>
    </div>
    <div
      class="marking-menu-item"
      data-item-angle="30"
      data-item-id="item-3-id"
    >
      <div
        class="marking-menu-line"
      />
      <div
        class="marking-menu-label"
      >
        item-3-name
      </div>
    </div>
  </div>
</div>
`;

exports[`createMenu update the active element 2`] = `
<div>
  <div
    class="marking-menu"
    style="left:30px;top:50px;"
  >
    <div
      class="marking-menu-item"
      data-item-angle="0"
      data-item-id="item-0-id"
    >
      <div
        class="marking-menu-line"
      />
      <div
        class="marking-menu-label"
      >
        item-0-name
      </div>
    </div>
    <div
      class="marking-menu-item active"
      data-item-angle="10"
      data-item-id="item-1-id"
    >
      <div
        class="marking-menu-line"
      />
      <div
        class="marking-menu-label"
      >
        item-1-name
      </div>
    </div>
    <div
      class="marking-menu-item"
      data-item-angle="20"
      data-item-id="item-2-id"
    >
      <div
        class="marking-menu-line"
      />
      <div
        class="marking-menu-label"
      >
        item-2-name
      </div>
    </div>
    <div
      class="marking-menu-item"
      data-item-angle="30"
      data-item-id="item-3-id"
    >
      <div
        class="marking-menu-line"
      />
      <div
        class="marking-menu-label"
      >
        item-3-name
      </div>
    </div>
  </div>
</div>
`;
